[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reactive-crypto-agentic-defi-system"
version = "0.1.0"
description = "CLI-first reactive DeFi system with strategy boundaries and runtime safety controls."
requires-python = ">=3.10"

[project.scripts]
agent-cli = "backend.cli.entrypoint:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
namespaces = true
